# esp32

./: README.md
Firmware/src/: main.cpp
Firmware/src/ChappieBsp/: Chappie.cpp  Chappie.h
Firmware/src/ChappieUI/: ChappieUI.cpp
Firmware/src/ChappieUI/Apps/: AppRegister.h
Firmware/src/ChappieUI/Apps/App_FFT/: App_FFT.cpp
Firmware/src/ChappieUI/Apps/App_Myapp1/: App_Myapp1.cpp  App_Myapp1.h
Firmware/src/ChappieUI/Apps/App_Myapp1/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Firmware/src/ChappieUI/Apps/App_Myapp1/UI/image/: ui_img_1385334836.c
Firmware/src/ChappieUI/Apps/App_mysetting/: App_mysetting.cpp  App_mysetting.h
Firmware/src/ChappieUI/Apps/App_mysetting/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_img_1107777675.c  ui_img_568895744.c  ui_img_708483677.c  ui_setting.c  ui_setting2.c  ui_setting3.c
Firmware/src/ChappieUI/Launcher/: App_Launcher.cpp  App_Launcher.h
Firmware/src/ChappieUI/Launcher/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Firmware/src/ChappieUI/Launcher/UI/components/: ui_comp_hook.c
Firmware/src/ChappieUI/Launcher/UI/fonts/: ui_font_FontUbuntuBold16.c  ui_font_FontUbuntuBold18.c  ui_font_FontUbuntuBold96.c
Firmware/src/ChappieUI/Launcher/UI/images/: ui_img_img_battery_png.c  ui_img_img_ble_png.c  ui_img_img_icon_defalut_png.c  ui_img_img_icon_test1_png.c  ui_img_img_icon_test2_png.c  ui_img_img_infos_png.c  ui_img_img_statebar_png.c  ui_img_img_wifi_png.c
Firmware/src/ChappieUI/Launcher/UI/screens/: ui_ScreenLauncher.c
(+1 files in other folders)
