SET(SOURCES screens/ui_ScreenLauncher.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_img_infos_png.c
    images/ui_img_img_wifi_png.c
    images/ui_img_img_ble_png.c
    images/ui_img_img_statebar_png.c
    images/ui_img_img_battery_png.c
    images/ui_img_img_icon_defalut_png.c
    images/ui_img_img_icon_test1_png.c
    images/ui_img_img_icon_test2_png.c
    fonts/ui_font_FontUbuntuBold16.c
    fonts/ui_font_FontUbuntuBold18.c
    fonts/ui_font_FontUbuntuBold96.c)

add_library(ui ${SOURCES})
